--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,6 +11,7 @@ phases:
       - npm -v # Verify npm version
       - node -v # Verify Node.js version
       - |
+      # this is test
         aws ssm get-parameters-by-path \
             --path "/todo/dev/FE" \
             --recursive \
